aguda-testing/test/invalid-syntax/tcomp000_xor/tcomp000_xor.agu
-- Tcomp000, Vasco T. Vasconcelos

let main (_) : Unit -> Unit =
  let x : Bool = true |*| false

